src/editdist/snapshots/wordtree__editdist__dist4__cmp_trab_tabi.snap
---
source: lib/src/editdist/dist4.rs
assertion_line: 346
expression: "cmp(\"trab\", \"tabi\")"
---
term - found
   t <->    t  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
  tr <->   ta  1ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  DifferentT4
 tra <->  tab  0ᵈⁱˢᵗ 1ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  DeleteT3
trab <-> tabi  0ᵈⁱˢᵗ 1ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  DeleteT2
