src/editdist/snapshots/wordtree__editdist__dist4__delete_allas_end.snap
---
source: lib/src/editdist/dist4.rs
assertion_line: 321
expression: "cmp(\"allas¹²\", \"alla¹²³\")"
---
term - found
   a <->    a  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
  al <->   al  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
 all <->  all  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
alla <-> alla  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
llas <-> lla¹  1ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  DifferentT4
las¹ <-> la¹²  0ᵈⁱˢᵗ 1ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  DeleteT3
as¹² <-> a¹²³  0ᵈⁱˢᵗ 1ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  DeleteT2
