src/editdist/snapshots/wordtree__editdist__dist4__delete_allas_mid.snap
---
source: lib/src/editdist/dist4.rs
assertion_line: 316
expression: "cmp(\"allas¹²\", \"alas¹²³\")"
---
term - found
   a <->    a  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
  al <->   al  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
 all <->  ala  1ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  DifferentT4
alla <-> alas  0ᵈⁱˢᵗ 1ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  DeleteT2
llas <-> las¹  0ᵈⁱˢᵗ 1ᵃˡⁱᵍⁿ 0ˢᵗᵉᵖ  DeleteT1
las¹ <-> las¹  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
as¹² <-> as¹²  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
