src/editdist/snapshots/wordtree__editdist__dist4__delete_allas_start.snap
---
source: lib/src/editdist/dist4.rs
assertion_line: 311
expression: "cmp(\"allas¹²\", \"llas¹²³\")"
---
term - found
   a <->    l  1ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  DifferentT4
  al <->   ll  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  ReplaceT3
 all <->  lla  0ᵈⁱˢᵗ 1ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  DeleteT2
alla <-> llas  0ᵈⁱˢᵗ 1ᵃˡⁱᵍⁿ 0ˢᵗᵉᵖ  DeleteT1
llas <-> llas  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
las¹ <-> las¹  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
as¹² <-> as¹²  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
