src/editdist/snapshots/wordtree__editdist__dist4__insert_alla_mid.snap
---
source: lib/src/editdist/dist4.rs
assertion_line: 301
expression: "cmp(\"alla¹²³\", \"al_la¹²\")"
---
term - found
   a <->    a  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
  al <->   al  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
 all <->  al_  1ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  DifferentT4
alla <-> al_l  0ᵈⁱˢᵗ 1ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  InsertT3
lla¹ <-> l_la  0ᵈⁱˢᵗ 1ᵃˡⁱᵍⁿ 2ˢᵗᵉᵖ  InsertT2
la¹² <-> la¹²  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
