src/editdist/snapshots/wordtree__editdist__dist4__insert_alla_start.snap
---
source: lib/src/editdist/dist4.rs
assertion_line: 296
expression: "cmp(\"alla¹²³\", \"_alla¹²\")"
---
term - found
   a <->    _  1ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  DifferentT4
  al <->   _a  0ᵈⁱˢᵗ 1ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  InsertT3
 all <->  _al  0ᵈⁱˢᵗ 1ᵃˡⁱᵍⁿ 2ˢᵗᵉᵖ  InsertT2
alla <-> alla  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
lla¹ <-> lla¹  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
la¹² <-> la¹²  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
