src/editdist/snapshots/wordtree__editdist__dist4__substitute_alla_start.snap
---
source: lib/src/editdist/dist4.rs
assertion_line: 281
expression: "cmp(\"alls¹²³\", \"_lls¹²³\")"
---
term - found
   a <->    _  1ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  DifferentT4
  al <->   _l  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  ReplaceT3
 all <->  _ll  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  ReplaceT2
alls <-> _lls  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  ReplaceT1
lls¹ <-> lls¹  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
ls¹² <-> ls¹²  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
s¹²³ <-> s¹²³  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
