src/editdist/snapshots/wordtree__editdist__dist4__switch_flyga_end.snap
---
source: lib/src/editdist/dist4.rs
assertion_line: 336
expression: "cmp(\"flyga\", \"flyag\")"
---
term - found
   f <->    f  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
  fl <->   fl  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
 fly <->  fly  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  AllSame
flyg <-> flya  1ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  DifferentT4
lyga <-> lyag  0ᵈⁱˢᵗ 0ᵃˡⁱᵍⁿ 1ˢᵗᵉᵖ  SwitchT3T4
